Changelog
----------

Because you have to know where your towel is.

1.0a5 (unreleased)
^^^^^^^^^^^^^^^^^^

- Rename package from collective.person to s17.person. [hvelarde]


1.0a4 (2012-09-12)
^^^^^^^^^^^^^^^^^^

- Fix problem with collective.z3cform.datagridfield dependency
  install. [aleGpereira]


1.0a3 (2012-06-13)
^^^^^^^^^^^^^^^^^^

- Avoid crash when birthday year is prior to 1900. [jsbueno]

- Invalidate SCHEMA_CACHE in order to get the real behaviors. [ericof]


1.0a2 (2012-05-23)
^^^^^^^^^^^^^^^^^^^^^

- Package documentation was updated. [hvelarde]

- A demo profile was added. [aleGpereira]

- Fix a bug in email validator. [aleGpereira]

- Edit permission added to member linked with person object and test cases for
  this. [aleGpereira]

- A custom template assigned to person content type. [aleGpereira]

- Standardized image of person profile to 200px. [aleGpereira]


1.0a1 (2012-05-09)
^^^^^^^^^^^^^^^^^^

- Initial release.
