@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
 <object name="portal_types" meta_type="Plone Types Tool">
-  <object name="s17.person.person" meta_type="Dexterity FTI" />
+  <object name="Person" meta_type="Dexterity FTI" />
 </object>
