@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<object name="s17.person.person"
+<object name="Person"
    meta_type="Dexterity FTI"
    i18n:domain="s17.person"
    xmlns:i18n="http://xml.zope.org/namespaces/i18n">
@@ -8,7 +8,6 @@
   <property name="title" i18n:translate="">Person</property>
   <property name="description" i18n:translate="">A person</property>
   <property name="content_icon">++resource++s17.person/user.png</property>
-  <property name="factory">s17.person.person</property>
   <property name="global_allow">True</property>
   <property name="filter_content_types">False</property>
   <property name="allowed_content_types" />
